2005-09-29  Juri Linkov  <juri@jurta.org>

	* display.texi (Displaying Messages): Rename argument name
	`string' to `format-string' in functions `message', `message-box',
	`message-or-box'.

2005-09-26  Chong Yidong  <cyd@stupidchicken.com>

	* errors.texi (Standard Errors): Corrected xrefs.

2005-09-18  Chong Yidong  <cyd@stupidchicken.com>

	* display.texi (Defining Images): Updated documentation for
	`image-load-path'.

2005-09-17  Richard M. Stallman  <rms@gnu.org>

	* display.texi (Defining Images): Clean up previous change.

2005-09-16  Romain Francoise  <romain@orebokech.com>

	* elisp.texi: Specify GFDL version 1.2.

	* doclicense.texi (GNU Free Documentation License): Update to
	version 1.2.

2005-09-15  Chong Yidong  <cyd@stupidchicken.com>

	* display.texi (Defining Images): Document `image-load-path'.

2005-09-15  Richard M. Stallman  <rms@gnu.org>

	* objects.texi (Printed Representation): Minor cleanup.
	(Box Diagrams): Minor fix.
	(Cons Cell Type): Move (...) index item here.
	(Box Diagrams): From here.
	(Array Type): Minor fix.
	(Type Predicates): Delete index "predicates".
	(Hash Table Type): Clarify xref.
	(Dotted Pair Notation): Minor fix.

2005-09-10  Chong Yidong  <cyd@stupidchicken.com>

	* files.texi (Saving Buffers): Fix typo.

2005-09-08  Richard M. Stallman  <rms@gnu.org>

	* tips.texi (Programming Tips): Correct the "default" prompt spec.

2005-09-08  Chong Yidong  <cyd@stupidchicken.com>

	* locals.texi (Standard Buffer-Local Variables): Don't include
	mode variables for minor modes.
	Fix xrefs for buffer-display-count, buffer-display-table,
	buffer-offer-save, buffer-saved-size, cache-long-line-scans,
	enable-multibyte-characters, fill-column, header-line-format,
	left-fringe-width, left-margin, and right-fringe-width.

	* hooks.texi (Standard Hooks): All hooks should conform to the
	standard naming convention now.
	Fix xref for `echo-area-clear-hook'.

	* display.texi (Usual Display): Note that indicate-empty-lines and