@@ -1,3 +1,9 @@
+2005-09-30  Romain Francoise  <romain@orebokech.com>
+
+	* minibuf.texi (High-Level Completion): Explain that the prompt
+	given to `read-buffer' should end with a colon and a space.
+	Update usage examples.
+
 2005-09-29  Juri Linkov  <juri@jurta.org>
 
 	* display.texi (Displaying Messages): Rename argument name
